--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,4 @@ title: "README"
 output: html_document
 ---
 
-try to activeate the credential helpler 
-refresh the password at 1000000 seconds 
-which is aruond 16 weeks
+# basic skills on linux, git, and rstudio.
